@@ -4,6 +4,9 @@ Changelog
 1.0b16 - Unreleased
 -------------------
 
+* Add support for partial syncing of catalog and solr indexes.
+  [witsch]
+
 
 1.0b15 - Released October 12, 2009
 ----------------------------------
